minor bug fixes

--- a/.gitignore
+++ b/.gitignore
@@ -177,5 +177,6 @@ pyrightconfig.json
 *.wav
 data/chat_history.json
 !/xtts_reference.wav
-
+/test
+conversation/*
 # End of https://www.toptal.com/developers/gitignore/api/python
